# internal/server/post_secret.go
@@ -8,8 +8,8 @@ import (
 	"github.com/psxzz/dmsecret-backend/api/public"
 )
 
-func (s *Server) PostSecrets(c *gin.Context) {
-	var body public.PostSecretsJSONRequestBody
+func (s *Server) PostSecret(c *gin.Context) {
+	var body public.PostSecretJSONRequestBody
 
 	if err := c.BindJSON(&body); err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, public.ValidationError{Error: err.Error()})
@@ -21,5 +21,5 @@ func (s *Server) PostSecrets(c *gin.Context) {
 		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 	}
 
-	c.JSON(http.StatusOK, public.PostSecretsOut{SecretID: secretID})
+	c.JSON(http.StatusOK, public.PostSecretOut{SecretID: secretID})
 }
